client/src/containers/SessionTree/SessionTree.css
.flexContainer{
    display: flex;
    flex-direction: column;
    margin:0 auto;
    padding-top: 24px;
}

.flexRow{
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    justify-content: space-around;
}

.grey{
    background-color: #4a4947;
}

.sessionTreeButton{
    width: 300px;
    height:348px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    background-color: #9147FF;
    margin-top:36px;
    color: whitesmoke;
    border-radius: 6px;
    border: black solid 1px;
}
.sessionTreeButton:hover{
    background-color: #8a6dd7;
    border: #575757 solid 2px;
}

.sessionButtonIcon{
    height:50%;
    padding-top: 12px;
}

.sessionButtonText{
    margin:0 auto;
}

.startSession{
    display:flex;
    flex-flow: column wrap;
    width:512px;
    height:576px;
    margin:24px;
    border-radius: 3px;
    background-color: #9147FF;
    color:white;
}
.sessionText{
    margin-left: 24%;
    margin-top:24px;
    padding: 5px;
}

.sessionLabel{
    margin-left:24px;
    margin-top:24px;
    width: 80%;
}
.sessionIn{
    margin-left:24px;
    margin-top:6px;
    width: 80%;
}
.startSessionButton{
    margin-top:36px;
    width: 80px;
}
.spacer{
    width: 352px;
    flex-shrink: inherit;
}
#buttonRow{
    margin-left:24px;
    width: 80%;
    justify-content: left;
    /*width: 448px;*/
}

.joinSession{
    width:364px;
    height:256px;
    margin:24px;
    border-radius: 3px;
    background-color: lightblue;
}

